# osso-af-utils

./: Makefile.in  README  configure  configure.ac  configure.in
debian/: changelog  control  install  postinst  rules  tmp-reaper.xsession
scripts/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  fb-progress.c  fb-progress.sh  play-sound.c  xset770.c
